fixed spacing and font size on titles and subheads in portfolio slide out pages

--- a/css/general.css
+++ b/css/general.css
@@ -423,15 +423,15 @@ h3 {
   font-size: .8em;
   margin-top: 2em;
   text-align: center;
-  margin-left: .9em;
   text-transform: lowercase;
+  font-size: .7rem;
 }
 
 .portfolio-title {
   margin-top: 0;
   margin-bottom: 2em;
   padding-bottom: 1rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-align: center;
   font-family: 'Questrial', sans-serif;
   text-transform: lowercase;
@@ -522,6 +522,16 @@ h3 {
       text-align: center;
       display: block;
       margin: 0 auto;
+    }
+  
+    .portfolio-title {
+      font-size: 2.3rem;
+    }
+  
+    .portfoliosubheads {
+      font-size: .8rem;
+      margin-left: 5rem;
+      margin-right: 5rem;
     }
 }
 
@@ -663,5 +673,10 @@ h3 {
   .portfolio-content {
     margin-left: 4rem;
     margin-right: 4rem;
+  }
+  
+  .portfoliosubheads {
+    margin-left: 13rem;
+    margin-right: 13rem;
   }
 }
